[package]
name = "ffnn"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/Callum-Irving/ffnn"
keywords = ["machine-learning", "neural-network", "feedforward"]
categories = ["science"]
description = "A very simple feedfoward neural network library"
include = ["src/", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
nalgebra = "0.30.1"
rand = "0.8.5"
