[package]
name = "ffnn"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/Callum-Irving/ffnn"
keywords = ["machine-learning", "neural-network", "feedforward"]
categories = ["science"]
description = "A very simple feedfoward neural network library"
include = ["src/", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray = { version = "0.15.6", features = ["blas"] }

blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10.5", features = ["cblas", "system"] }
polars = { version = "0.25.1", features = ["ndarray"] }
plotters = "0.3.1"
